argocd/apps/infra/istio/resources/istio-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: kube-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - "*.yanello.net"
        - yanello.net
      port:
        name: http2
        number: 80
        protocol: HTTP
      # tls:
      #   httpsRedirect: true
    - hosts:
        - "*.yanello.net"
        - "yanello.net"
      port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        credentialName: default-ingress-cert
        # maxProtocolVersion: TLSV1_3
        # minProtocolVersion: TLSV1_2
        mode: SIMPLE
        # cipherSuites:
        #   - TLS_AES_256_GCM_SHA384
        #   - TLS_CHACHA20_POLY1305_SHA256
        #   - ECDHE-ECDSA-AES256-GCM-SHA384
        #   - ECDHE-RSA-AES256-GCM-SHA384
        #   - ECDHE-ECDSA-CHACHA20-POLY1305
        #   - ECDHE-RSA-CHACHA20-POLY1305
        #   - DHE-RSA-AES256-GCM-SHA384
