argocd/apps/infra/istio/resources/external-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: resume-vs
spec:
  hosts:
    - resume.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: marcus-server.lan
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hass-vs
spec:
  hosts:
    - homeassistant.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: homeassistant.local
            port:
              number: 8123
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ntopng-vs
spec:
  hosts:
    - ntopng.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: router.local
            port:
              number: 30341
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: plex-vs
spec:
  hosts:
    - plex.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: marcus-server.lan
            port:
              number: 32400
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nextcloud-vs
spec:
  hosts:
    - nextcloud.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: marcus-server.lan
            port:
              number: 6987
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iotawatt-vs
spec:
  hosts:
    - iota.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: iotawatt.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: minio-vs
spec:
  hosts:
    - minio.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: marcus-server.lan
            port:
              number: 9000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: agh-vs
spec:
  hosts:
    - agh.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: router.local
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: opn-vs
spec:
  hosts:
    - router.yanello.net
    - opn.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: router.local
            port:
              number: 1000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pikvm-vs
spec:
  hosts:
    - pikvm.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: pikvm.local
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ubiquiti-vs
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  hosts:
    - ui.yanello.net
  gateways:
    - istio-system/kube-gateway
  tls:
    - match:
        - port: 443
          sniHosts:
            - ui.yanello.net
    - route:
        - destination:
            host: homeassistant.local
            port:
              number: 8443
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
spec:
  hosts:
    - grafana.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: marcus-server.lan
            port:
              number: 4000
