argocd/apps/infra/istio/resources/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: opn-httproute
  namespace: istio-system
spec:
  hostnames:
    - router.yanello.net
    - opn.yanello.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kube-gateway
  rules:
    - backendRefs:
        - name: router.lan
          namespace: istio-system
          port: 1000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: iotawatt-httproute
  namespace: istio-system
spec:
  hostnames:
    - iota.yanello.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kube-gateway
  rules:
    - backendRefs:
        - name: iotawatt.lan
          namespace: istio-system
          port: 80
status:
  parents: null
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: ntopng-httproute
  namespace: istio-system
spec:
  hostnames:
    - ntopng.yanello.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kube-gateway
  rules:
    - backendRefs:
        - name: router.lan
          namespace: istio-system
          port: 30341
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: adguardhome-httproute
  namespace: istio-system
spec:
  hostnames:
    - agh.yanello.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kube-gateway
  rules:
    - backendRefs:
        - name: agh.lan
          namespace: istio-system
          port: 3000
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: hass-httproute
  namespace: istio-system
spec:
  hostnames:
    - homeassistant.yanello.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kube-gateway
  rules:
    - backendRefs:
        - name: homeassistant.lan
          namespace: istio-system
          port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: ubiquiti-httproute
  namespace: istio-system
spec:
  hostnames:
    - ui.yanello.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kube-gateway
  rules:
    - backendRefs:
        - name: homeassistant.lan
          namespace: istio-system
          port: 8880
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: nextcloud-httproute
  namespace: istio-system
spec:
  hostnames:
    - nextcloud.yanello.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kube-gateway
  rules:
    - backendRefs:
        - name: marcus-server.lan
          namespace: istio-system
          port: 6987
