argocd/apps/infra/istio/resources/pikvm.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: pikvm-se
  namespace: istio-system
spec:
  hosts:
    - pikvm.lan
  endpoints:
    - address: 192.168.1.9
  ports:
    - number: 80
      name: http
      protocol: HTTP
  resolution: STATIC
  location: MESH_EXTERNAL
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: pikvm-httproute
  namespace: istio-system
spec:
  hostnames:
    - pikvm.yanello.net
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: kube-gateway
  rules:
    - backendRefs:
        - name: pikvm-service
          kind: Service
          #group: networking.istio.io
          port: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: pikvm-vs
spec:
  hosts:
    - pikvm.yanello.net
  gateways:
    - istio-system/kube-gateway
  http:
    - route:
        - destination:
            host: pikvm.lan
            port:
              number: 80
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pikvm-service
# spec:
#   ports:
#     - name: http
#       protocol: TCP
#       port: 80
#       targetPort: 80
# ---
# apiVersion: discovery.k8s.io/v1
# kind: EndpointSlice
# metadata:
#   name: pikvm-service-1 # by convention, use the name of the Service
#   # as a prefix for the name of the EndpointSlice
#   labels:
#     # You should set the "kubernetes.io/service-name" label.
#     # Set its value to match the name of the Service
#     kubernetes.io/service-name: pikvm-service
# addressType: IPv4
# ports:
#   - name: http # should match with the name of the service port defined above
#     appProtocol: http
#     protocol: TCP
#     port: 80
# endpoints:
#   - addresses:
#       - 192.168.1.9
#     conditions:
#       ready: true
#       serving: true
#       terminating: false
