argocd/apps/infra/istio/resources/router.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gateway.networking.k8s.io/generator: ingress2gateway-0.4.0
  labels:
    app.kubernetes.io/instance: istio-resources
  name: opnsense-httproute
  namespace: istio-system
spec:
  hostnames:
    - opn.yanello.net
    - router.yanello.net
  parentRefs:
    - name: gateway-api
  rules:
    - backendRefs:
        - name: opnsense-service
          kind: Service
          port: 1000
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense-service
spec:
  ports:
    - name: http
      protocol: TCP
      port: 1000
      targetPort: 1000
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: opnsense-service-1 # by convention, use the name of the Service
  # as a prefix for the name of the EndpointSlice
  labels:
    # You should set the "kubernetes.io/service-name" label.
    # Set its value to match the name of the Service
    kubernetes.io/service-name: opnsense-service
    endpointslice.kubernetes.io/managed-by: cluster-admin
addressType: IPv4
ports:
  - name: http # should match with the name of the service port defined above
    appProtocol: http
    protocol: TCP
    port: 1000
endpoints:
  - addresses:
      - 192.168.1.1
    conditions:
      ready: true
